#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ispider, [0.0.4], [SounOS@gmail.com])
AC_CONFIG_SRCDIR([src/iniparser.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lchardet':
AC_CHECK_LIB([chardet], [main])
# FIXME: Replace `main' with a function in `-libase':
AC_CHECK_LIB([ibase], [main])
# FIXME: Replace `main' with a function in `-lpcre':
AC_CHECK_LIB([pcre], [main])
# FIXME: Replace `main' with a function in `-lsbase':
AC_CHECK_LIB([sbase], [main])
# FIXME: Replace `main' with a function in `-lz':
AC_CHECK_LIB([z], [main])

#pthread
havepthread=no
AC_CHECK_LIB(pthread,pthread_create,havepthread=yes)
if test "$havepthread" = "yes" ; then
    CPPFLAGS="${CPPFLAGS} -DHAVE_PTHREAD"
    LDFLAGS="${LDFLAGS} -lpthread"
    LIBS="${LIBS} -lpthread"
fi

#mmap
havemmap=no
AC_CHECK_LIB(c, munmap, havemmap=yes)
if test "$havemmap" = "yes" ; then
    CPPFLAGS="${CPPFLAGS} -DHAVE_MMAP"
fi

#iconv
haveiconv=no
AC_CHECK_LIB(iconv, iconv_open, haveiconv=yes)
if test "$haveiconv" = "yes" ; then
    CPPFLAGS="${CPPFLAGS} -DHAVE_ICONV"
    LDFLAGS="${LDFLAGS} -liconv"
    LIBS="${LIBS} -liconv"
fi

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h locale.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/file.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([ftruncate gethostbyname getpagesize gettimeofday inet_ntoa memset mkdir munmap setlocale strcasecmp strchr strdup strerror strncasecmp strstr])

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 src/Makefile])
AC_OUTPUT
